[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci040-sophiazheng"
version = "0.1.2"
readme = "README.md"
dependencies = [
    "groq",
    "gitpython",
    "python-dotenv",
]

[project.scripts]
chat = "chat:main"

[tool.setuptools]
py-modules = ["chat"]
packages = ["tools"]